[metadata]
name = tracksclient
version = 0.0.1
summary = Tracks CLI
description-file =
    README.rst
author = Stéphane "sheeprine" Albert
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    tracksclient

[entry_points]
console_scripts =
    tracks = tracksclient.cli:main

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
